<resources>
    <string name="app_name">Book Archive</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="user_name">User name</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="page_number">Page Number</string>
    <string name="book_type">Book Type</string>
    <string name="book_subject">Book Subject</string>
    <string name="book_language">Book Language</string>
    <string name="book_publishing_house">Publisher</string>
    <string name="book_message">Message about the book</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="suggestion">Suggestions</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
</resources>