<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10dp"
    android:background="@color/screen_background">

    <TextView
        android:id="@+id/recycler_item_book_name"
        style="@style/regular_24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/book_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_item_book_author"
        style="@style/medium_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/book_author"
        app:layout_constraintBottom_toBottomOf="@id/recycler_item_view"
        app:layout_constraintEnd_toStartOf="@+id/recycler_item_page_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_item_book_name" />

    <TextView
        android:id="@+id/recycler_item_page_number"
        style="@style/medium_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center"
        android:text="@string/page_number"
        app:layout_constraintBottom_toBottomOf="@id/recycler_item_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recycler_item_book_author"
        app:layout_constraintTop_toBottomOf="@id/recycler_item_book_name" />

    <View
        android:id="@+id/recycler_item_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1dp"
        android:background="@color/icon_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>